--- a/public/templates/default-book-view.html
+++ b/public/templates/default-book-view.html
@@ -68,7 +68,7 @@
           </li>
           <li class="fnav-item cmdForward"><a href="#"><span class="icon"><i class="fa fa-forward" title="<$tr>Próxima página</$tr>"></i></span></a></li>
           <li class="fnav-item cmdFastForward"><a href="#"><span class="icon"><i class="fa fa-fast-forward"  title="<$tr>10 pages forward</$tr>"></i></span></a></li>
-          <!--<li class="fnav-item cmdSave"><a href="#"><span class="icon"><i class="fa fa-download"  title="<$tr>Download</$tr>"></i></span></a></li>-->
+          <li class="fnav-item cmdSave"><a href="#"><span class="icon"><i class="fa fa-download"  title="<$tr>Download</$tr>"></i></span></a></li>
           <li class="fnav-item cmdPrint"><a href="#"><span class="icon"><i class="fa fa-print"  title="<$tr>Imprimir</$tr>"></i></span></a></li>
           <li class="fnav-item cmdFullScreen"><a href="#"><span class="icon"><i class="fa fa-arrows-alt" title="<$tr>Tela inteira</$tr>"></i></span></a></li>
           <!--<li class="dropup fnav-item toggle widSettings">
