--- a/public/css/short-white-book-view.css
+++ b/public/css/short-white-book-view.css
@@ -690,8 +690,12 @@ and (-webkit-min-device-pixel-ratio: 2) {
     opacity: 1;
   }
 
+  .fa-download {
+    padding: 0 0 0 15px !important;
+  }
+
   .fa-bookmark, .fa-arrows-alt {
-    padding: 0 10px 0 12px !important;
+    padding: 0 10px 0 5px !important;
   }
 }
 
