--- a/public/css/style.css
+++ b/public/css/style.css
@@ -273,7 +273,7 @@ logo-fix {
 }
 
 .carousel-item__image {
-  width: 100%
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   border-bottom-left-radius: 200px;
@@ -284,10 +284,10 @@ logo-fix {
 }
 
 .carousel-item__experimente--vertical-align {
-  width: 680px;
+  width: 100%;
   position: fixed;
   top: 50%;
-  transform: translate(-7%, -50%);
+  transform: translate(0, -50%);
 }
 
 .carousel-item__bg {
