Remoção dos botoes de brilho

--- a/public/templates/default-book-view.html
+++ b/public/templates/default-book-view.html
@@ -81,7 +81,7 @@
               
             </ul>
           </li>-->
-          <li  class="fnav-item cmdLightingUp">
+          <!--<li  class="fnav-item cmdLightingUp">
             <a href="#">
               <span class="icon">
                 <i class="icon-brightness-up" title="<$tr>Aumentar Brilho</$tr>"></i>
@@ -95,7 +95,7 @@
                 </i>
               </span>
             </a>
-          </li>
+          </li>-->
         </ul>
       </nav>
     </div>
