--- a/public/templates/default-book-view.html
+++ b/public/templates/default-book-view.html
@@ -86,8 +86,8 @@
 								   title="<$tr>Download</$tr>"></i></span></a></li>
 					<li class="fnav-item cmdPrint"><a href="#"><span class="icon"><i class="fa fa-print"
 								   title="<$tr>Imprimir</$tr>"></i></span></a></li>
-					<!-- <li class="fnav-item cmdFullScreen"><a href="#"><span class="icon"><i class="fa fa-arrows-alt"
-								   title="<$tr>Tela inteira</$tr>"></i></span></a></li> -->
+					<li class="fnav-item cmdFullScreen"><a href="#"><span class="icon"><i class="fa fa-arrows-alt"
+								   title="<$tr>Tela inteira</$tr>"></i></span></a></li>
 					<!--<li class="dropup fnav-item toggle widSettings">
             <a href="#"><div class="icon-caret"><span class="icon"><i class="fa fa-cog" title="<$tr>Settings</$tr>"></i> <i class="caret"></i></span></div></a>
             <ul class="menu hidden">
