Removido botão download

--- a/public/templates/default-book-view.html
+++ b/public/templates/default-book-view.html
@@ -82,8 +82,8 @@
 								   title="<$tr>Próxima página</$tr>"></i></span></a></li>
 					<li class="fnav-item cmdFastForward"><a href="#"><span class="icon"><i class="fa fa-fast-forward"
 								   title="<$tr>10 pages forward</$tr>"></i></span></a></li>
-					<li class="fnav-item cmdSave"><a href="#"><span class="icon"><i class="fa fa-download"
-								   title="<$tr>Download</$tr>"></i></span></a></li>
+					<!-- <li class="fnav-item cmdSave"><a href="#"><span class="icon"><i class="fa fa-download"
+								   title="<$tr>Download</$tr>"></i></span></a></li> -->
 					<li class="fnav-item cmdPrint"><a href="#"><span class="icon"><i class="fa fa-print"
 								   title="<$tr>Imprimir</$tr>"></i></span></a></li>
 					<li class="fnav-item cmdFullScreen"><a href="#"><span class="icon"><i class="fa fa-arrows-alt"
